--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,3 @@
-.q{
-    width: 100%;
-    height: auto;
-    background-color: #000;
-}
-
 h2{
     background-image: url("img/heading-bg.png");
     color: floralwhite;
@@ -42,7 +36,7 @@ nav ul{
 body{
     padding: 55px 0px 0px 0px;
     z-index: 0px;
-    background-color: rgb(224, 192, 152);
+    background: linear-gradient(160deg, rgb(225, 200, 170),rgb(224, 192, 152), rgb(190, 162, 129));
 }
 .row-content{
     margin: 0px auto;
@@ -50,13 +44,7 @@ body{
     border-bottom: 1px ridge;
     min-height: 400px;
 }
-canvas {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: 0;
-    margin: 0;
-}
+
 .form-group{
     margin-bottom: 1rem;
 }
@@ -80,6 +68,9 @@ footer{
     margin-bottom: 0%;
     width: 100%;
     text-align: center;
+}
+.footer-bottom a:hover{
+    text-shadow: 2px 2px rgb(224, 192, 152);
 }
 li a, address a{
     color: rgb(228, 194, 0);
