--- a/events.css
+++ b/events.css
@@ -1,25 +1,3 @@
-.card-body:hover .imagebox img {
-    opacity: 0;
-}
-
-.card-body .details {
-    position: absolute;
-    left: 37%;
-    width: 85px;
-    height: 85px;
-    bottom: 30px;
-    overflow: hidden;
-    color: #292929;
-    transition: all .5s ease;
-}
-
-.card-body .details h3 {
-    text-align: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: 700;
-    margin-top: 25;
-}
-
 .carousel-control-prev,
 .carousel-control-next {
     background-color: black;
@@ -43,13 +21,28 @@
     height: 400px;
 }
 
+.com-div {
+    font-weight: bold;
+    text-align: center;
+    padding: 5%;
+}
+
 .com-img {
     border: #FEFEFE solid;
+    border-radius: 50%;
+    height: 200px;
+    width: 200px;
+    transition: 0.5s ease-in-out;
+}
+
+.com-img:hover{
+    transform: scale(1.1);
 }
 
 .card {
     border-radius: 0%;
     border: none;
+    overflow: hidden;
 }
 
 .card-pos {
@@ -61,6 +54,115 @@
     padding: 0%;
 }
 
+.overlay{
+    position: absolute;
+    bottom: 0;
+    background-color: black;
+    border-top-left-radius: 20%;
+    border-top-right-radius: 20%;
+    width: 100%;
+    text-align: center;
+    opacity: 0.9;
+}
+
+.overlay p{
+    font-size: large;
+    font-weight: bolder;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color: aliceblue;
+    text-shadow: 2.3px 2.3px maroon;
+}
+
+.overlay-slide{
+    display: none;
+    font-size: medium;
+    color: aliceblue;
+}
+
+.card-body:hover .overlay{
+    animation: slide-up 0.6s;
+}
+
+.card-body:hover .overlay-slide{
+    display: block;
+}
+
 .card-btn {
     margin-bottom: 2%;
+}
+
+@media screen and (min-width: 1200px) {
+    .com-div {
+        padding: 0%;
+    }
+
+    .com-div1 {
+        padding-top: 15%;
+        padding-left: 5%;
+    }
+
+    .com-div2 {
+        padding-top: 5%;
+        padding-left: 2%;
+    }
+
+    .com-div3 {
+        padding-top: 15%;
+        padding-right: 5%;
+    }
+
+    .com-div4 {
+        padding-top: 10%;
+        padding-left: 5%;
+    }
+
+    .com-div5 {
+        margin-top: 0%;
+        padding-left: 2%;
+    }
+
+    .com-div6 {
+        padding-top: 10%;
+        padding-right: 5%;
+    }
+
+    .com-div7 {
+        margin-top: 0%;
+        padding-left: 2%;
+    }
+
+    .com-img {
+        height: 250px;
+        width: 250px;
+        margin-top: 0;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1199.5px){
+    .com-img {
+        height: 150px;
+        width: 150px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .carousel-control-next, .carousel-control-prev{
+        height: 3vh;
+        width: 3vh;
+    }
+
+    .carousel-item img{
+        height: 275px;
+        width: 83.33%;
+    }
+}
+
+@keyframes slide-up {
+    0% {
+        transform: translateY(200px);
+    }
+
+    100% {
+        transform: translateY(0);
+    }
 }
