--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,32 @@
-h2{
-    background-image: url("img/heading-bg.png");
+h2 {
+    background-image: url("img/heading-bg.webp");
     color: floralwhite;
     text-align: center;
     border-radius: 25px;
     padding-bottom: 1%;
     padding-top: 1%;
 }
-.navbar{
-    background-color:black;
+
+.navbar {
+    background-color: black;
 }
-.navbar-nav{
+
+.navbar-nav {
     color: floralwhite;
 }
-nav ul{
+
+nav ul {
     margin-right: 40px;
 }
-.navbar-nav li a{
+
+.navbar-nav li a {
     font-weight: bold;
     color: white;
     text-shadow: -3px 3px maroon;
+    padding: 7%;
 }
-.navbar-nav li a:hover{
+
+.navbar-nav li a:hover {
     font-weight: bold;
     color: rgb(224, 192, 152);
     text-shadow: -3px 3px maroon;
@@ -29,39 +35,44 @@ nav ul{
 }
 
 .navbar li {
-        margin-left : 1em;
-        margin-right : 1em;
-    }
+    margin-left: 1em;
+    margin-right: 1em;
+}
 
-body{
+body {
     padding: 55px 0px 0px 0px;
     z-index: 0px;
-    background: linear-gradient(160deg, rgb(225, 200, 170),rgb(224, 192, 152), rgb(190, 162, 129));
+    background: linear-gradient(160deg, #faebd7, rgb(224, 192, 152));;
 }
-.row-content{
+
+.row-content {
     margin: 0px auto;
     padding: 40px 0px 40px 0px;
-    border-bottom: 1px ridge;
     min-height: 400px;
 }
 
-.form-group{
+.form-group {
     margin-bottom: 1rem;
 }
-.btn-social-icon{
+
+.btn-social-icon {
+    font-size: x-large;
     color: white;
 }
-.btn-social-icon:hover{
+
+.btn-social-icon:hover {
     color: maroon;
     box-shadow: 0px 0px 5px 5px lightgoldenrodyellow;
 }
-footer{
+
+footer {
     background-color: black;
-    color: teal;
+    color: rgb(255, 196, 0);
     margin: 0px auto;
-    padding: 20px 0px 20px 0px; 
+    padding: 20px 0px 20px 0px;
 }
-.footer-bottom{
+
+.footer-bottom {
     background: lightgray;
     color: black;
     padding: 10px 0px;
@@ -69,9 +80,22 @@ footer{
     width: 100%;
     text-align: center;
 }
-.footer-bottom a:hover{
+
+.footer-bottom a:hover {
     text-shadow: 2px 2px rgb(224, 192, 152);
 }
-li a, address a{
-    color: rgb(228, 194, 0);
+
+li a,
+address a {
+    color: teal;
+}
+
+@font-face {
+    font-family: Roboto;
+    src: url("/Roboto-Regular.ttf");
+}
+
+@font-face {
+    font-family:  OpenSans;
+    src: url("/OpenSans-Regular.ttf");
 }
