--- a/index.css
+++ b/index.css
@@ -119,6 +119,10 @@ canvas {
         width: 3vh;
         height: 3vh;
     }
+
+    h1 span {
+        font-size: 1.25em;
+    }
 }
 
 @media screen and (max-width: 1100px) {
@@ -149,7 +153,7 @@ h1 {
 
 h1 span {
     font-family: 'Caesar Dressing', cursive;
-    font-size: 1.25em;
+    font-size: 1.75em;
     cursor: pointer;
     text-transform: uppercase;
     vertical-align: middle;
@@ -324,7 +328,7 @@ h1 span {
     color: teal;
     border: 2px solid;
     border-radius: 5rem;
-    padding: 10px 20px;
+    padding: 1% 3%;
 }
 
 .gallery-pic .btn:hover {
