--- a/gallery.css
+++ b/gallery.css
@@ -41,8 +41,8 @@ body{
     pointer-events:none;
     z-index:4;
     transition: .3s ease-in-out;
-    -webkit-backdrop-filter: blur(5px) saturate(1.8);
-    backdrop-filter: blur(5px) saturate(1.8);
+    -webkit-backdrop-filter: brightness(0.5);
+    backdrop-filter: brightness(0.5);
 }
 
 .gallery-item:hover .text{
