--- a/index.css
+++ b/index.css
@@ -351,7 +351,7 @@ h1 span {
     font-weight: 1200;
     font-size: 70px;
     letter-spacing: 2px;
-    background: linear-gradient(90deg,rgb(247, 247, 152), gold, rgb(255, 174, 0));
+    background: linear-gradient(90deg, lightgoldenrodyellow, gold, rgb(255, 174, 0));
     text-shadow: 3px 3px 15px lightgoldenrodyellow;
     background-repeat: round;
     background-size: 80%;
