--- a/events.css
+++ b/events.css
@@ -91,6 +91,24 @@
     margin-bottom: 2%;
 }
 
+.jumbotron img{
+    width: 900px;
+    height: 500px;
+}
+.reg-event{
+    margin-top: 2%;
+    background-color: darkslateblue;
+    border: darkslateblue;
+    color: white;
+}
+
+.reg-event:hover{
+    filter: brightness(0.92);
+    background-color: darkslateblue;
+    border: darkslateblue;
+    color: white;
+}
+
 @media screen and (min-width: 1200px) {
     .com-div {
         padding: 0%;
@@ -143,6 +161,11 @@
         height: 150px;
         width: 150px;
     }
+
+    .jumbotron img{
+        width: 600px;
+        height: 400px;
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -154,6 +177,27 @@
     .carousel-item img{
         height: 275px;
         width: 83.33%;
+    }
+}
+
+@media (min-width: 500px) and (max-width: 767px) {
+    .jumbotron img{
+        width: 400px;
+        height: 350px;
+    }
+}
+
+@media (min-width: 425px) and (max-width: 500px) {
+    .jumbotron img{
+        width: 350px;
+        height: 320px;
+    }
+}
+
+@media screen and (max-width: 425px){
+    .jumbotron img{
+        width: 300px;
+        height: 280px;
     }
 }
 
