Revised Final Edition 5.0
Changes in the structure and look of the website. (Home Page, Gallery, About Us, Events).

--- a/events.css
+++ b/events.css
@@ -97,6 +97,7 @@
 }
 .reg-event{
     margin-top: 2%;
+    padding: 1% 3%;
     background-color: darkslateblue;
     border: darkslateblue;
     color: white;
