--- a/gallery.css
+++ b/gallery.css
@@ -1,4 +1,4 @@
-.grid {
+/* .grid {
     padding: 0 10px; 
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
@@ -34,9 +34,140 @@
     transform: scale(1.02);
 }
 
-@media screen and (max-width:992px) {
+@media (min-width: 768px) and (max-width:992px) {
+  .grid{
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  }
+}
+
+@media (min-width: 576px) and (max-width: 639px) {
+  .grid{
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  }
   .grid-item{
-     width: 340px;
-     height: 360px;
+    height: 620px;
+  }
+} */
+
+.gallery { 
+  -webkit-column-count: 3;
+  -moz-column-count: 3;
+  column-count: 3;
+  -webkit-column-gap: 10px;
+  -moz-column-gap: 10px;
+  column-gap: 10px;
+  margin-top: 10px;
+  overflow: hidden;
+}
+
+.gallery img { 
+  width: 100%; 
+  height: auto;
+  transition: 500ms;
+  margin-bottom: 10px;
+  page-break-inside: avoid; /* For Firefox. */
+  -webkit-column-break-inside: avoid; /* For Chrome & friends. */
+  break-inside: avoid; /* For standard browsers like IE. :-) */
+}
+
+.gallery-item{
+  height: 100%;
+  width: 100%;
+  position: relative;
+}
+
+.gallery-item .text{
+  opacity:0;
+  position: absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+  width:100%;
+  color:#fff;
+  font-size: x-large;
+  text-align: center;
+  pointer-events:none;
+  z-index:4;
+  transition: .3s ease-in-out;
+  -webkit-backdrop-filter: brightness(0.5);
+  backdrop-filter: brightness(0.5);
+}
+
+.gallery-item:hover .text{
+  opacity:1;
+  animation: move-down .3s linear;
+}
+
+.gallery-item:hover img{
+  scale: 1.03;
+}
+
+/* .modal {
+display: flex;
+align-items: center;
+justify-content: center;
+flex-direction: center;
+} */
+
+.modal-img,.model-vid{
+margin: 0;
+padding: 0;
+width: 100%;
+height: 100%;
+display: table
+}
+.modal-body{
+padding: 0px;
+}
+
+.modal-dialog {
+height: 100%;
+    position: relative;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-content {
+border: none;
+}
+
+@media screen and (max-width: 767px) {
+.gallery { 
+      -webkit-column-count: 2;
+      -moz-column-count: 2;
+      column-count: 2;
+  }
+.gallery div { margin: 0; 
+      width: 200px;
+  }
+.modal-dialog {
+      margin: 0 8vw;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .gallery { 
+      -webkit-column-count: 1;
+      -moz-column-count: 1;
+      column-count: 1;
+  }
+  .gallery div { 
+      margin: 0; 
+      width: 200px;
+  }
+}
+
+@keyframes move-down{
+
+  0%{
+      top:10%;
+  }
+  50%{
+      top:35%;
+  }
+  100%{
+      top:50%;
   }
 }
