Termination & Renewal Of Website Commit
Last few updations to simplify the code before the website gets renewed.

--- a/styles.css
+++ b/styles.css
@@ -123,8 +123,7 @@ footer a, footer p{
   }
 
 #eventSponsors{
-    background-color: rgba(28, 28, 128, 0.95);
-    padding: 3%;
+    background-color: rgb(16, 145, 196);
 }
 
   /* Slider */
